--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <h1 class = "clock">00:00:00</h1>
+
         
         <script src="./js/main.js"></script>
     </body>
