--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
-    <head>
-        <title>Chrome App</title>
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        
-        <script src="./js/main.js"></script>
-    </body>
+
+<head>
+    <title>Chrome App</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+    <h1 class="clock">00:00:00</h1>
+    <script src="./js/main.js"></script>
+</body>
+
 </html>
