--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1 class="clock">00:00:00</h1>
-        <script src="./js/main.js"></script>
+        <script src="./js/clock.js"></script>
     </body>
 </html>
