--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
 
 <body>
     <h1 class="clock">00:00:00</h1>
-    <script src="./js/main.js"></script>
+    <span class="quote"></span>
+    <span class="author"></span>
+    <form id=login-form>
+        <input id="login-input" type="text" placeholder="이름을 입력하세요.">
+        <input id="login" type="submit">
+    </form>
+
+
+
+    <script src="/js/main.js"></script>
+    <script src="/js/background.js"></script>
+    <script src="/js/quotes.js"></script>
+    <script src="/js/greeting.js"></script>
 </body>
 
 </html>
