--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <h1 id="clock">00:00:00</h1>
+        <p id="quote"></p> 
+        <p id="author"></p>"
         
-        <script src="./js/main.js"></script>
+        <form id="login-form" class="a                                                  ">
+            <input type="text" id="login-input" />
+            <input type="submit" id="login-button" />
+        </form>
+        <p id="greeting"></p>
+
+        <script src="./js/clock.js"></script>
+        <script src="./js/background.js"></script>
+        <script src="./js/quote.js"></script>
+        <script src="./js/greetings.js"></script>
+
+
     </body>
 </html>
