--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
-        <script src="./js/main.js"></script>
+        <h1 id="clock">00:00:00</h1>
+        <p id="quote"></p>
+        <p id="author"></p>
+        <form id="login-form" class="a b c">
+            <input type="text" id="login-input" />
+            <input type="submit" id="login-button" />
+        </form>
+        <p id="greeting"></p>
+        <script src="./js/clock.js"></script>
+        <script src="./js/background.js"></script>
+        <script src="./js/quote.js"></script>
+        <script src="./js/greeting.js"></script>
     </body>
 </html>
