--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
     <head>
         <title>Chrome App</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
-        <script src="./js/main.js"></script>
+        <h1 id="clock">00:00:00</h1>
+        <p id="quote"></p>
+        <p id="author"></p>
+        <script src="./js/clock.js"></script>
+        <script src="./js/background.js"></script>
+        <script src="./js/quote.js"></script>
     </body>
 </html>
