--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-<<<<<<< Updated upstream
-        <h1 class="clock">00:00:00</h1>
-        <script src="./js/main.js"></script>
-=======
         <h1 id="clock">00:00:00</h1>
+        <span id="greeting"></span>
+        <br>
         <span id="quote"></span>
         <span id="author"></span>
         
@@ -16,11 +14,10 @@
             <input id="login-input" type="text" placeholder="이름을 입력해주세요" />
             <input id="login" type="submit">
         </form>
-        <span id="greeting"></span>
 
         <script src="./js/clock.js"></script>
-        <!--<script src="./js/background.js"></script>-->
-        <script src="./js/quotes.js"></script>        <script src="./js/greeting.js"></script>
->>>>>>> Stashed changes
+        <script src="./js/background.js"></script>
+        <script src="./js/quotes.js"></script>
+        <script src="./js/greeting.js"></script>
     </body>
 </html>
