--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
             <input id="login-input" type="text" placeholder="이름을 입력해주세요" />
             <input id="login" type="submit">
         </form>
+        
+        <form id="logout-form">
+            <input id = "logout" type = "submit" value = "로그아웃">
+        </form>
+
+        <span id="weather"></span>
+        <span id="city"></span>
 
         <script src="./js/clock.js"></script>
-        <script src="./js/background.js"></script>
         <script src="./js/quotes.js"></script>
         <script src="./js/greeting.js"></script>
+        <script src="./js/weather.js"></script>
+
     </body>
 </html>
