--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
          로그아웃
         </button>
 
-        
+        <p id="weather"></p>
+        <p id="city"></p>
         
         <script src="./js/clock.js"></script>
         <script src="./js/background.js"></script>
         <script src="./js/quote.js"></script>
         <script src="./js/greetings.js"></script>
+        <script src="./js/weather.js"></script>
 
 
     </body>
