로그인/로그아웃 만듬
짜잔

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
         <h1 id = "clock">00:00:00</h1>
         <p id = "quote"></p>
         <p id = "author"></p>
+        <form id="login">
+            <input type="text" id="login-input"/>
+            <input type="submit" id="login-submit" value="로그인"/>
+        </form>
+        <button id="logout">로그아웃</button>
+        <p id="welcome"></p>
         <script src="./js/background.js"></script>
         <script src="./js/clock.js"></script>
         <script src="./js/quote.js"></script>
+        <script src="./js/login.js"></script>
     </body>
 </html>
