--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input id="login-input" type="text" placeholder="이름을 입력하세요.">
         <input id="login" type="submit">
     </form>
+    <span id="greeting"></span>
 
 
 
