--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Chrome App</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
-        <script src="./js/main.js"></script>
+        <h1 id="clock" class="b">00:00:00</h1>
+        <script src="./js/clock.js"></script>
+        <script src="./js/background.js"></script>
+        <script src="./js/quotes.js"></script>
     </body>
 </html>
