--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
         <h1 id="clock">00:00:00</h1>
         <p id="quote"></p>
         <p id="author"></p>
+        <form id="login-form">
+            <input type="text" id="login-input" />
+            <input type="submit" id="login-submit" />
+        </form>
+        <form id="logout-form">
+            <input type="submit" id="logout-submit" value="로그아웃"/>
+        </form>
+        <p id="welcome"></p>
         <script src="./js/clock.js"></script>
         <script src="./js/background.js"></script>
         <script src="./js/quote.js"></script>
+        <script src="./js/login.js"></script>
     </body>
 </html>
