--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <script src="./js/clock.js"></script>
-        <script src="./js/background.js"></script>
-        <script src="./js/qut.js"></script>
-        <script src="./js/button.js"></script>
-        <script src="./js/login.js"></script>
         <h1 class="hi"></h1>
         <p id="welcome"></p>
         <h1 id="clock">00:00:00</h1>
         <p id="qut"></p>
         <p id="asur"></p>
+        <p id="local"></p>
+        <p id="weather"></p>
         <form id="login-form">
             <input type="text" id="login-input">
             <input type="submit" id="login-submit">
@@ -21,5 +18,12 @@
         <form id="logout-form">
             <input type="submit" id="logout-submit" value="로그아웃">
         </form>
+        <script src="./js/clock.js"></script>
+        <script src="./js/background.js"></script>
+        <script src="./js/qut.js"></script>
+        <script src="./js/button.js"></script>
+        <script src="./js/login.js"></script>
+        <script src="./js/weather.js"></script>
+        <script src="./js/airpollution.js"></script>
     </body>
 </html>
