--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1 id="clock">00:00:00</h1>
-        <p id="quote"></p>
-        <p id="author"></p>
-        <form id="login-form">
-            <input type="text" id="login-input" />
-            <input type="submit" id="login-submit" />
-        </form>
-        <form id="logout-form">
-            <input type="submit" id="logout-submit" value="로그아웃"/>
-        </form>
-        <p id="welcome"></p>
+        <div class="container">
+            <h1 id="clock">00:00:00</h1>
+            <p id="quote"></p>
+            <p id="author"></p>
+            <form id="login-form">
+                <input type="text" id="login-input" />
+                <input type="submit" id="login-submit" />
+            </form>
+            <form id="logout-form">
+                <input type="submit" id="logout-submit" value="로그아웃"/>
+            </form>
+            <p id="welcome"></p>
+            <p id="weather"></p>
+            <p id="city"></p>
+        </div>
         <script src="./js/clock.js"></script>
         <script src="./js/background.js"></script>
         <script src="./js/quote.js"></script>
         <script src="./js/login.js"></script>
+        <script src="./js/weather.js"></script>
     </body>
 </html>
+
+
